@@ -3,13 +3,11 @@ TO DO
 Note that this is not a complete to do list. It mostly only lists bugs
 and quirks that I need to fix eventually.
 
-saving user catalog doesn't update
+- plugin mgr install doesn't update existing plugins
+
 last char of line - C+next
  null view -- browser's buttons broken
-C+j broken wit read only
 - middle drag: go back to start: don't insert!
- [error] AWT-EventQueue-0: java.lang.NullPointerException
-[error] AWT-EventQueue-0:  at org.gjt.sp.jedit.Java14$TextAreaTransferHandler.exportDone(Unknown Source)
 
 - backup time distance setting
 - {{{foo}}}\n{{{bar}}}; put cursor at start, enter
@@ -24,7 +22,6 @@ invalidation being performed
 - toggle caret scroll to when not in vis region?
 - print selection
 - show context w/ S+F10
-- drop in same place: 
 - adding to icons prop
 - control auto reload
 - C+d with folds
